--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             --bg-color: #f2f2f5;
             --text-dark: #222222;
             --gray-text: #8e8e93;
+            /* Эффект нажатия: легкое затемнение и плавное размытие */
             --press-effect: brightness(0.92) blur(1.5px);
         }
 
@@ -25,50 +26,82 @@
             user-select: none;
         }
 
-        /* Поиск */
+        /* 1. Поиск в шапке */
         .search-wrapper {
             background-color: white;
             padding: 15px;
-            display: flex; align-items: center; gap: 12px;
+            display: flex;
+            align-items: center;
+            gap: 12px;
             border-bottom: 1px solid #f0f0f0;
         }
         .search-bar {
             background-color: #f0f0f2;
-            border-radius: 10px; padding: 10px 12px;
-            color: var(--gray-text); font-size: 15px;
-            display: flex; align-items: center; gap: 10px; flex: 1;
+            border-radius: 10px;
+            padding: 10px 12px;
+            color: var(--gray-text);
+            font-size: 15px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            flex: 1;
         }
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
         .header-extra-icon { width: 24px; height: 24px; object-fit: contain; }
 
-        /* Баннеры */
+        /* 2. Рекламные баннеры (reklama.png и reklama2.png) */
         .banners-container { background-color: white; padding-top: 5px; }
         .banners-scroll {
-            display: flex; overflow-x: auto;
-            padding: 5px 15px 15px; gap: 10px;
+            display: flex;
+            overflow-x: auto;
+            padding: 5px 15px 15px;
+            gap: 10px;
             -webkit-overflow-scrolling: touch;
         }
         .banners-scroll::-webkit-scrollbar { display: none; }
+        
         .banner-item {
-            min-width: 85%; height: 120px;
+            min-width: 85%;
+            height: 120px;
             border-radius: 14px;
-            background-position: center; background-size: cover;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        .banner-item:active {
+            filter: var(--press-effect);
+            transform: scale(0.98);
+        }
+
+        /* 3. Сетка основных сервисов */
+        .services-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            background: white;
+            padding: 10px 5px 15px;
+            gap: 20px 0;
+        }
+        .service-item { 
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; 
+            text-align: center;
             transition: all 0.3s ease;
         }
-        .banner-item:active { filter: var(--press-effect); transform: scale(0.98); }
-
-        /* Сетка сервисов */
-        .services-grid {
-            display: grid; grid-template-columns: repeat(4, 1fr);
-            background: white; padding: 10px 5px 15px; gap: 20px 0;
+        .service-item:active {
+            filter: var(--press-effect);
         }
-        .service-item { display: flex; flex-direction: column; align-items: center; text-align: center; transition: all 0.3s ease; }
-        .service-item:active { filter: var(--press-effect); opacity: 0.8; }
-        .icon-wrapper { height: 44px; width: 44px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; }
-        .service-icon { width: 40px; height: 40px; object-fit: contain; }
-        .service-name { font-size: 11.5px; font-weight: 600; }
 
-        /* Двухрядная карусель */
+        .icon-wrapper { height: 44px; width: 44px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; }
+        .service-icon {
+            width: 40px;
+            height: 40px;
+            object-fit: contain;
+        }
+        .service-name { font-size: 11.5px; font-weight: 600; color: var(--text-dark); }
+
+        /* 4. Двухрядная карусель промо-блоков */
         .promo-scroll-area {
             margin-top: 12px;
             overflow-x: auto;
@@ -93,10 +126,9 @@
             display: flex;
             align-items: center;
             gap: 12px;
-            min-width: 210px;
+            min-width: 215px;
             transition: all 0.4s cubic-bezier(0.2, 0.8, 0.2, 1);
         }
-
         .promo-card:active {
             filter: var(--press-effect);
             transform: scale(0.96);
@@ -118,14 +150,19 @@
             margin-left: 3px;
         }
 
-        /* Таббар */
+        /* 5. Нижний таббар */
         .tab-bar {
             position: fixed; bottom: 0; left: 0; right: 0;
             background: white; display: grid; grid-template-columns: repeat(4, 1fr);
             padding: 8px 0; border-top: 1px solid #e5e5e5; z-index: 1000;
             padding-bottom: env(safe-area-inset-bottom);
         }
-        .tab-item { display: flex; flex-direction: column; align-items: center; font-size: 10px; color: var(--gray-text); gap: 4px; }
+        .tab-item { 
+            display: flex; flex-direction: column; align-items: center; 
+            font-size: 10px; color: var(--gray-text); gap: 4px;
+            transition: all 0.2s ease;
+        }
+        .tab-item:active { filter: blur(1px); opacity: 0.7; }
         .tab-item.active { color: var(--kaspi-red); font-weight: 700; }
         .tab-icon { font-size: 20px; }
     </style>
@@ -143,7 +180,7 @@
     <div class="banners-container">
         <div class="banners-scroll">
             <div class="banner-item" style="background-image: url('reklama.png');" onclick="vibrate()"></div>
-            <div class="banner-item" style="background: linear-gradient(135deg, #1d976c 0%, #93f9b9 100%);" onclick="vibrate()"></div>
+            <div class="banner-item" style="background-image: url('reklama2.png');" onclick="vibrate()"></div>
         </div>
     </div>
 
@@ -221,10 +258,12 @@
         tg.ready();
         tg.expand();
 
+        // Вибрация при нажатии
         function vibrate() {
             tg.HapticFeedback.impactOccurred('light');
         }
 
+        // Переключение вкладок в меню
         function switchTab(el) {
             vibrate();
             document.querySelectorAll('.tab-item').forEach(i => i.classList.remove('active'));
