--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             margin: 0; padding: 0;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             color: var(--text-dark);
-            padding-bottom: 120px; /* Увеличил отступ из-за высокого таббара */
+            padding-bottom: 80px; /* Оптимальный отступ под новый таббар */
             -webkit-font-smoothing: antialiased;
             overflow-x: hidden;
             user-select: none;
@@ -30,7 +30,7 @@
             position: sticky;
             top: 0;
             background-color: white;
-            padding: 15px;
+            padding: 12px 15px;
             display: flex;
             align-items: center;
             gap: 12px;
@@ -40,7 +40,7 @@
         .search-bar {
             background-color: #f0f0f2;
             border-radius: 10px;
-            padding: 10px 12px;
+            padding: 8px 12px;
             color: var(--gray-text);
             font-size: 15px;
             display: flex;
@@ -49,29 +49,29 @@
             flex: 1;
         }
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
-        .header-extra-icon { width: 24px; height: 24px; object-fit: contain; }
+        .header-extra-icon { width: 22px; height: 22px; object-fit: contain; }
 
-        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ИСПРАВЛЕНО) */
+        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ПЛОТНЫЕ) */
         .banners-container { background-color: white; padding-top: 5px; }
         .banners-scroll {
             display: flex;
             overflow-x: auto;
             padding: 5px 15px 15px;
-            gap: 12px;
+            gap: 8px; /* Уменьшил расстояние между баннерами */
             -webkit-overflow-scrolling: touch;
         }
         .banners-scroll::-webkit-scrollbar { display: none; }
         
         .banner-item {
-            min-width: 75%; /* Уменьшил ширину */
-            height: 110px;  /* Уменьшил высоту, чтобы не тянуло */
-            border-radius: 14px;
+            min-width: 80%; /* Чуть увеличил ширину, чтобы было меньше "пустоты" */
+            height: 115px;
+            border-radius: 12px;
             overflow: hidden;
             background-position: center;
-            background-size: contain; /* Картинка больше не растягивается */
+            background-size: contain;
             background-repeat: no-repeat;
-            background-color: #ffffff; /* Фон, если картинка короче блока */
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            background-color: #ffffff;
+            transition: all 0.3s ease;
         }
         .banner-item:active {
             filter: var(--press-effect);
@@ -86,14 +86,10 @@
             padding: 10px 5px 15px;
             gap: 20px 0;
         }
-        .service-item { 
-            display: flex; flex-direction: column; align-items: center; text-align: center;
-            transition: all 0.3s ease;
-        }
-        .service-item:active { filter: var(--press-effect); }
+        .service-item { display: flex; flex-direction: column; align-items: center; text-align: center; }
         .icon-wrapper { height: 44px; width: 44px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; }
-        .service-icon { width: 40px; height: 40px; object-fit: contain; }
-        .service-name { font-size: 11.5px; font-weight: 600; color: var(--text-dark); }
+        .service-icon { width: 38px; height: 38px; object-fit: contain; }
+        .service-name { font-size: 11px; font-weight: 600; color: var(--text-dark); }
 
         /* 4. Двухрядная карусель */
         .promo-scroll-area {
@@ -113,47 +109,39 @@
         }
         .promo-card {
             background: white;
-            border-radius: 16px;
-            padding: 12px 18px;
-            display: flex; align-items: center; gap: 12px;
-            min-width: 215px;
-            transition: all 0.4s cubic-bezier(0.2, 0.8, 0.2, 1);
+            border-radius: 14px;
+            padding: 10px 15px;
+            display: flex; align-items: center; gap: 10px;
+            min-width: 200px;
+            transition: all 0.3s ease;
         }
-        .promo-card:active { filter: var(--press-effect); transform: scale(0.96); }
-        .promo-img { width: 40px; height: 40px; object-fit: contain; flex-shrink: 0; }
-        .promo-text-container { display: flex; flex-direction: column; white-space: nowrap; }
-        .promo-main-text { font-size: 14.5px; font-weight: 700; color: var(--text-dark); }
-        .promo-subtext { font-size: 11.5px; color: var(--gray-text); margin-top: 1px; }
+        .promo-img { width: 36px; height: 36px; object-fit: contain; }
+        .promo-main-text { font-size: 14px; font-weight: 700; }
+        .promo-subtext { font-size: 11px; color: var(--gray-text); }
 
-        .badge-yellow {
-            background-color: #ffdb00; color: #222; padding: 1px 5px;
-            border-radius: 5px; font-size: 12px; font-weight: 800; margin-left: 3px;
-        }
-
-        /* 5. НИЖНЯЯ ПАНЕЛЬ (УВЕЛИЧЕНО В 2 РАЗА) */
+        /* 5. НИЖНЯЯ ПАНЕЛЬ (КОМПАКТНАЯ) */
         .tab-bar {
             position: fixed; bottom: 0; left: 0; right: 0;
             background: white; display: grid; grid-template-columns: repeat(4, 1fr);
-            height: 90px; /* Увеличено */
+            height: 65px; /* Уменьшенная высота */
             align-items: center;
             border-top: 1px solid #e5e5e5; z-index: 3000;
             padding-bottom: env(safe-area-inset-bottom);
         }
         .tab-item { 
             display: flex; flex-direction: column; align-items: center; 
-            font-size: 13px; /* Текст крупнее */
-            color: var(--gray-text); gap: 8px;
+            font-size: 10px; /* Компактный шрифт */
+            color: var(--gray-text); gap: 4px;
             transition: all 0.2s ease;
         }
         .tab-item.active { color: var(--kaspi-red); font-weight: 700; }
         
         .tab-icon-img { 
-            width: 38px; /* Иконки крупнее */
-            height: 38px; 
+            width: 28px; /* Компактные иконки */
+            height: 28px; 
             object-fit: contain;
             opacity: 0.4;
             filter: grayscale(100%);
-            transition: all 0.2s ease;
         }
         .tab-item.active .tab-icon-img {
             opacity: 1;
@@ -175,6 +163,8 @@
         <div class="banners-scroll">
             <div class="banner-item" style="background-image: url('reklama.png');" onclick="vibrate()"></div>
             <div class="banner-item" style="background-image: url('reklama2.png');" onclick="vibrate()"></div>
+            <div class="banner-item" style="background-image: url('reklama.png');" onclick="vibrate()"></div>
+            <div class="banner-item" style="background-image: url('reklama2.png');" onclick="vibrate()"></div>
         </div>
     </div>
 
@@ -194,43 +184,29 @@
             <div class="promo-card" onclick="vibrate()">
                 <img src="red.png" class="promo-img">
                 <div class="promo-text-container">
-                    <div class="promo-main-text">Рассрочка 0-0-12</div>
-                    <div class="promo-subtext">Покупки в рассрочку</div>
+                    <div class="promo-main-text">Рассрочка</div>
+                    <div class="promo-subtext">0-0-12</div>
                 </div>
             </div>
             <div class="promo-card" onclick="vibrate()">
                 <img src="credit.png" class="promo-img">
                 <div class="promo-text-container">
-                    <div class="promo-main-text">Кредит наличными</div>
-                    <div class="promo-subtext">до 2 млн ₸ на Gold</div>
+                    <div class="promo-main-text">Кредит</div>
+                    <div class="promo-subtext">на Gold</div>
                 </div>
             </div>
             <div class="promo-card" onclick="vibrate()">
                 <img src="deposit.png" class="promo-img">
                 <div class="promo-text-container">
-                    <div class="promo-main-text">Депозит <span class="badge-yellow">20%</span></div>
-                    <div class="promo-subtext">Накопительный счет</div>
+                    <div class="promo-main-text">Депозит</div>
+                    <div class="promo-subtext">20%</div>
                 </div>
             </div>
             <div class="promo-card" onclick="vibrate()">
                 <img src="magnum.png" class="promo-img">
                 <div class="promo-text-container">
                     <div class="promo-main-text">Magnum</div>
-                    <div class="promo-subtext">Продукты с доставкой</div>
-                </div>
-            </div>
-            <div class="promo-card" onclick="vibrate()">
-                <img src="credit2.png" class="promo-img">
-                <div class="promo-text-container">
-                    <div class="promo-main-text">Кредит на покупки</div>
-                    <div class="promo-subtext">Рассрочка 0%</div>
-                </div>
-            </div>
-            <div class="promo-card" onclick="vibrate()">
-                <img src="gid.png" class="promo-img">
-                <div class="promo-text-container">
-                    <div class="promo-main-text">Kaspi Гид</div>
-                    <div class="promo-subtext">Ответы на вопросы</div>
+                    <div class="promo-subtext">Доставка</div>
                 </div>
             </div>
         </div>
