--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             margin: 0; padding: 0;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             color: var(--text-dark);
-            padding-bottom: 80px; /* Оптимальный отступ под новый таббар */
+            padding-bottom: 80px;
             -webkit-font-smoothing: antialiased;
             overflow-x: hidden;
             user-select: none;
@@ -51,26 +51,29 @@
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
         .header-extra-icon { width: 22px; height: 22px; object-fit: contain; }
 
-        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ПЛОТНЫЕ) */
+        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ИСПРАВЛЕННЫЕ ОТСТУПЫ) */
         .banners-container { background-color: white; padding-top: 5px; }
         .banners-scroll {
             display: flex;
             overflow-x: auto;
             padding: 5px 15px 15px;
-            gap: 8px; /* Уменьшил расстояние между баннерами */
+            /* Минимальное расстояние между блоками */
+            gap: 8px; 
             -webkit-overflow-scrolling: touch;
+            scroll-snap-type: x mandatory; /* Мягкое примагничивание при скролле */
         }
         .banners-scroll::-webkit-scrollbar { display: none; }
         
         .banner-item {
-            min-width: 80%; /* Чуть увеличил ширину, чтобы было меньше "пустоты" */
-            height: 115px;
+            min-width: 85%;
+            height: 120px;
             border-radius: 12px;
             overflow: hidden;
             background-position: center;
-            background-size: contain;
+            /* Используем cover, чтобы картинка занимала всё место без белых полос по бокам */
+            background-size: cover; 
             background-repeat: no-repeat;
-            background-color: #ffffff;
+            scroll-snap-align: start;
             transition: all 0.3s ease;
         }
         .banner-item:active {
@@ -112,33 +115,33 @@
             border-radius: 14px;
             padding: 10px 15px;
             display: flex; align-items: center; gap: 10px;
-            min-width: 200px;
+            min-width: 210px;
             transition: all 0.3s ease;
         }
+        .promo-card:active { filter: var(--press-effect); transform: scale(0.96); }
         .promo-img { width: 36px; height: 36px; object-fit: contain; }
+        .promo-text-container { display: flex; flex-direction: column; }
         .promo-main-text { font-size: 14px; font-weight: 700; }
         .promo-subtext { font-size: 11px; color: var(--gray-text); }
 
-        /* 5. НИЖНЯЯ ПАНЕЛЬ (КОМПАКТНАЯ) */
+        /* 5. НИЖНЯЯ ПАНЕЛЬ */
         .tab-bar {
             position: fixed; bottom: 0; left: 0; right: 0;
             background: white; display: grid; grid-template-columns: repeat(4, 1fr);
-            height: 65px; /* Уменьшенная высота */
+            height: 65px;
             align-items: center;
             border-top: 1px solid #e5e5e5; z-index: 3000;
             padding-bottom: env(safe-area-inset-bottom);
         }
         .tab-item { 
             display: flex; flex-direction: column; align-items: center; 
-            font-size: 10px; /* Компактный шрифт */
-            color: var(--gray-text); gap: 4px;
-            transition: all 0.2s ease;
+            font-size: 10px; color: var(--gray-text); gap: 4px;
         }
         .tab-item.active { color: var(--kaspi-red); font-weight: 700; }
         
         .tab-icon-img { 
-            width: 28px; /* Компактные иконки */
-            height: 28px; 
+            width: 26px;
+            height: 26px; 
             object-fit: contain;
             opacity: 0.4;
             filter: grayscale(100%);
@@ -184,8 +187,8 @@
             <div class="promo-card" onclick="vibrate()">
                 <img src="red.png" class="promo-img">
                 <div class="promo-text-container">
-                    <div class="promo-main-text">Рассрочка</div>
-                    <div class="promo-subtext">0-0-12</div>
+                    <div class="promo-main-text">Рассрочка 0-0-12</div>
+                    <div class="promo-subtext">Покупки</div>
                 </div>
             </div>
             <div class="promo-card" onclick="vibrate()">
@@ -198,8 +201,8 @@
             <div class="promo-card" onclick="vibrate()">
                 <img src="deposit.png" class="promo-img">
                 <div class="promo-text-container">
-                    <div class="promo-main-text">Депозит</div>
-                    <div class="promo-subtext">20%</div>
+                    <div class="promo-main-text">Депозит 20%</div>
+                    <div class="promo-subtext">Накопления</div>
                 </div>
             </div>
             <div class="promo-card" onclick="vibrate()">
@@ -207,6 +210,20 @@
                 <div class="promo-text-container">
                     <div class="promo-main-text">Magnum</div>
                     <div class="promo-subtext">Доставка</div>
+                </div>
+            </div>
+            <div class="promo-card" onclick="vibrate()">
+                <img src="credit2.png" class="promo-img">
+                <div class="promo-text-container">
+                    <div class="promo-main-text">Кредит 0%</div>
+                    <div class="promo-subtext">На покупки</div>
+                </div>
+            </div>
+            <div class="promo-card" onclick="vibrate()">
+                <img src="gid.png" class="promo-img">
+                <div class="promo-text-container">
+                    <div class="promo-main-text">Kaspi Гид</div>
+                    <div class="promo-subtext">Помощь</div>
                 </div>
             </div>
         </div>
