--- a/index.html
+++ b/index.html
@@ -51,30 +51,33 @@
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
         .header-extra-icon { width: 22px; height: 22px; object-fit: contain; }
 
-        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ИСПРАВЛЕННЫЕ ОТСТУПЫ) */
+        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ИСПРАВЛЕНО) */
         .banners-container { background-color: white; padding-top: 5px; }
         .banners-scroll {
             display: flex;
             overflow-x: auto;
             padding: 5px 15px 15px;
-            /* Минимальное расстояние между блоками */
-            gap: 8px; 
+            /* Плотное расстояние между баннерами */
+            gap: 10px; 
             -webkit-overflow-scrolling: touch;
-            scroll-snap-type: x mandatory; /* Мягкое примагничивание при скролле */
+            scroll-snap-type: x mandatory;
         }
         .banners-scroll::-webkit-scrollbar { display: none; }
         
         .banner-item {
-            min-width: 85%;
-            height: 120px;
+            /* Фиксированная ширина вместо 85%, чтобы не были слишком широкими */
+            min-width: 280px; 
+            height: 130px;
             border-radius: 12px;
             overflow: hidden;
+            background-color: #fff; /* Фон на случай если картинка меньше */
             background-position: center;
-            /* Используем cover, чтобы картинка занимала всё место без белых полос по бокам */
+            /* contain гарантирует отсутствие растягивания, cover — заполнение без дыр */
             background-size: cover; 
             background-repeat: no-repeat;
-            scroll-snap-align: start;
+            scroll-snap-align: center;
             transition: all 0.3s ease;
+            flex-shrink: 0; /* Чтобы flex не сжимал их */
         }
         .banner-item:active {
             filter: var(--press-effect);
@@ -156,10 +159,10 @@
 
     <div class="search-wrapper">
         <div class="search-bar">
-            <img src="magnifier.png" class="search-icon">
+            <img src="magnifier.png" class="search-icon" alt="">
             Поиск по Kaspi.kz
         </div>
-        <img src="silvershop.png" class="header-extra-icon">
+        <img src="silvershop.png" class="header-extra-icon" alt="">
     </div>
 
     <div class="banners-container">
