--- a/index.html
+++ b/index.html
@@ -51,37 +51,39 @@
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
         .header-extra-icon { width: 22px; height: 22px; object-fit: contain; }
 
-        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ИСПРАВЛЕНО) */
-        .banners-container { background-color: white; padding-top: 5px; }
+        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ФИНАЛЬНОЕ ИСПРАВЛЕНИЕ) */
+        .banners-container { 
+            background-color: white; 
+            padding: 10px 0; 
+        }
         .banners-scroll {
             display: flex;
             overflow-x: auto;
-            padding: 5px 15px 15px;
-            /* Плотное расстояние между баннерами */
-            gap: 10px; 
+            padding: 0 15px;
+            /* Делаем расстояние между ними еще меньше для плотности */
+            gap: 8px; 
             -webkit-overflow-scrolling: touch;
             scroll-snap-type: x mandatory;
         }
         .banners-scroll::-webkit-scrollbar { display: none; }
         
         .banner-item {
-            /* Фиксированная ширина вместо 85%, чтобы не были слишком широкими */
-            min-width: 280px; 
-            height: 130px;
+            /* Ограничиваем ширину: не более 300px и около 75% экрана смартфона */
+            flex: 0 0 75%; 
+            max-width: 300px; 
+            height: 140px;
             border-radius: 12px;
             overflow: hidden;
-            background-color: #fff; /* Фон на случай если картинка меньше */
             background-position: center;
-            /* contain гарантирует отсутствие растягивания, cover — заполнение без дыр */
-            background-size: cover; 
+            /* contain — картинка сжимается до размеров блока без потери пропорций */
+            background-size: contain; 
             background-repeat: no-repeat;
-            scroll-snap-align: center;
-            transition: all 0.3s ease;
-            flex-shrink: 0; /* Чтобы flex не сжимал их */
+            scroll-snap-align: start;
+            transition: all 0.2s ease;
         }
         .banner-item:active {
             filter: var(--press-effect);
-            transform: scale(0.98);
+            transform: scale(0.97);
         }
 
         /* 3. Сетка основных сервисов */
