--- a/index.html
+++ b/index.html
@@ -100,26 +100,32 @@
             display: grid;
             grid-template-rows: repeat(2, 1fr);
             grid-auto-flow: column;
-            grid-auto-columns: 145px;
-            gap: 12px; padding: 0 15px;
+            grid-auto-columns: 145px; /* Размер блока остался прежним */
+            gap: 10px; padding: 0 15px;
         }
         .product-card {
             background: white; border-radius: 12px;
-            padding: 12px; display: flex; flex-direction: column;
+            padding: 8px; /* Слегка уменьшили внутренний отступ для места */
+            display: flex; flex-direction: column;
             box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+            height: 185px; /* Фиксированная высота блока */
+            box-sizing: border-box;
         }
         .product-img {
-            width: 100%; height: 100px;
-            object-fit: contain; margin-bottom: 8px;
+            width: 100%; 
+            height: 115px; /* УВЕЛИЧЕНО: картинка стала крупнее */
+            object-fit: contain; 
+            margin-bottom: 4px;
         }
         .product-title {
-            font-size: 12px; line-height: 1.3;
-            height: 32px; overflow: hidden;
+            font-size: 12px; line-height: 1.2;
+            height: 28px; overflow: hidden;
             display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;
-            margin-bottom: 6px; color: #333;
+            margin-bottom: 4px; color: #333;
         }
         .product-price {
             font-size: 14px; font-weight: 800; color: var(--text-dark);
+            margin-top: auto; /* Прижимает цену к низу */
         }
 
         /* 5. НИЖНЯЯ ПАНЕЛЬ */
