--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Kaspi.kz</title>
+    <title>Kaspi.kz - Реплика</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         :root {
@@ -41,19 +41,29 @@
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
         .header-extra-icon { width: 22px; height: 22px; object-fit: contain; }
 
-        /* 2. РЕКЛАМНЫЕ БАННЕРЫ */
+        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ИСПРАВЛЕННЫЕ) */
         .banners-container { background-color: white; padding: 5px 0 10px; }
         .banners-scroll {
-            display: flex; overflow-x: auto; padding: 0 10px; gap: 4px;
+            display: flex; overflow-x: auto; padding: 0 15px; gap: 10px;
             -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;
         }
         .banners-scroll::-webkit-scrollbar { display: none; }
         .banner-item {
-            flex: 0 0 88%; height: 125px; border-radius: 10px;
-            overflow: hidden; background-position: center;
-            background-size: cover; background-repeat: no-repeat;
+            flex: 0 0 85%; 
+            height: 150px; 
+            border-radius: 12px;
+            overflow: hidden; 
+            background-position: center;
+            /* contain — чтобы картинка 1080x1080 вписалась целиком */
+            background-size: contain; 
+            background-repeat: no-repeat;
+            /* Цвет фона, чтобы закрыть пустоты по бокам */
+            background-color: #ffffff; 
+            border: 1px solid #eee;
             scroll-snap-align: center;
+            transition: all 0.2s ease;
         }
+        .banner-item:active { transform: scale(0.98); filter: brightness(0.9); }
 
         /* 3. СЕРВИСЫ */
         .services-grid {
@@ -100,20 +110,20 @@
             display: grid;
             grid-template-rows: repeat(2, 1fr);
             grid-auto-flow: column;
-            grid-auto-columns: 145px; /* Размер блока остался прежним */
+            grid-auto-columns: 145px;
             gap: 10px; padding: 0 15px;
         }
         .product-card {
             background: white; border-radius: 12px;
-            padding: 8px; /* Слегка уменьшили внутренний отступ для места */
+            padding: 8px;
             display: flex; flex-direction: column;
             box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-            height: 185px; /* Фиксированная высота блока */
+            height: 190px;
             box-sizing: border-box;
         }
         .product-img {
             width: 100%; 
-            height: 115px; /* УВЕЛИЧЕНО: картинка стала крупнее */
+            height: 115px; /* Увеличенный размер картинок товаров */
             object-fit: contain; 
             margin-bottom: 4px;
         }
@@ -125,7 +135,7 @@
         }
         .product-price {
             font-size: 14px; font-weight: 800; color: var(--text-dark);
-            margin-top: auto; /* Прижимает цену к низу */
+            margin-top: auto;
         }
 
         /* 5. НИЖНЯЯ ПАНЕЛЬ */
@@ -152,6 +162,7 @@
         <div class="banners-scroll">
             <div class="banner-item" style="background-image: url('reklama.png');" onclick="vibrate()"></div>
             <div class="banner-item" style="background-image: url('reklama2.png');" onclick="vibrate()"></div>
+            <div class="banner-item" style="background-image: url('reklama.png');" onclick="vibrate()"></div>
         </div>
     </div>
 
@@ -243,7 +254,11 @@
     <script>
         const tg = window.Telegram.WebApp;
         tg.ready(); tg.expand();
-        function vibrate() { tg.HapticFeedback.impactOccurred('light'); }
+        
+        function vibrate() { 
+            tg.HapticFeedback.impactOccurred('light'); 
+        }
+        
         function switchTab(el) {
             vibrate();
             document.querySelectorAll('.tab-item').forEach(i => i.classList.remove('active'));
