--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Kaspi.kz - Реплика</title>
+    <title>Kaspi.kz</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         :root {
@@ -41,29 +41,29 @@
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
         .header-extra-icon { width: 22px; height: 22px; object-fit: contain; }
 
-        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ИСПРАВЛЕННЫЕ) */
+        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (ИСПРАВЛЕНО ПОД КВАДРАТЫ) */
         .banners-container { background-color: white; padding: 5px 0 10px; }
         .banners-scroll {
-            display: flex; overflow-x: auto; padding: 0 15px; gap: 10px;
+            display: flex; overflow-x: auto; padding: 0 15px; 
+            gap: 8px; /* Маленькое расстояние между блоками */
             -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;
         }
         .banners-scroll::-webkit-scrollbar { display: none; }
         .banner-item {
-            flex: 0 0 85%; 
-            height: 150px; 
+            /* flex: 42% делает блоки узкими, чтобы квадратные фото заполнили их без полей */
+            flex: 0 0 42%; 
+            height: 155px; 
             border-radius: 12px;
             overflow: hidden; 
             background-position: center;
-            /* contain — чтобы картинка 1080x1080 вписалась целиком */
             background-size: contain; 
             background-repeat: no-repeat;
-            /* Цвет фона, чтобы закрыть пустоты по бокам */
             background-color: #ffffff; 
-            border: 1px solid #eee;
-            scroll-snap-align: center;
+            border: 1px solid #f0f0f0;
+            scroll-snap-align: start;
             transition: all 0.2s ease;
         }
-        .banner-item:active { transform: scale(0.98); filter: brightness(0.9); }
+        .banner-item:active { transform: scale(0.96); }
 
         /* 3. СЕРВИСЫ */
         .services-grid {
@@ -123,7 +123,7 @@
         }
         .product-img {
             width: 100%; 
-            height: 115px; /* Увеличенный размер картинок товаров */
+            height: 115px; 
             object-fit: contain; 
             margin-bottom: 4px;
         }
@@ -160,6 +160,8 @@
 
     <div class="banners-container">
         <div class="banners-scroll">
+            <div class="banner-item" style="background-image: url('reklama.png');" onclick="vibrate()"></div>
+            <div class="banner-item" style="background-image: url('reklama2.png');" onclick="vibrate()"></div>
             <div class="banner-item" style="background-image: url('reklama.png');" onclick="vibrate()"></div>
             <div class="banner-item" style="background-image: url('reklama2.png');" onclick="vibrate()"></div>
             <div class="banner-item" style="background-image: url('reklama.png');" onclick="vibrate()"></div>
@@ -254,11 +256,7 @@
     <script>
         const tg = window.Telegram.WebApp;
         tg.ready(); tg.expand();
-        
-        function vibrate() { 
-            tg.HapticFeedback.impactOccurred('light'); 
-        }
-        
+        function vibrate() { tg.HapticFeedback.impactOccurred('light'); }
         function switchTab(el) {
             vibrate();
             document.querySelectorAll('.tab-item').forEach(i => i.classList.remove('active'));
