--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         :root {
-            --kaspi-red: #f14635;
+            /* Сделал цвет чуть более насыщенным красным */
+            --kaspi-red: #ff2d17; 
             --bg-color: #f2f2f5;
             --text-dark: #222222;
             --gray-text: #8e8e93;
@@ -40,7 +41,7 @@
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
         .header-extra-icon { width: 22px; height: 22px; object-fit: contain; }
 
-        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (КОМПАКТНЫЕ 54%) */
+        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (54%) */
         .banners-container { background-color: white; padding: 5px 0 10px; }
         .banners-scroll {
             display: flex; overflow-x: auto; padding: 0 15px; 
@@ -63,15 +64,32 @@
             box-shadow: 0 1px 4px rgba(0,0,0,0.08);
         }
 
-        /* 3. СЕРВИСЫ */
+        /* 3. СЕРВИСЫ (ОБНОВЛЕННЫЕ СТИЛИ) */
         .services-grid {
             display: grid; grid-template-columns: repeat(4, 1fr);
             background: white; padding: 10px 5px 15px; gap: 20px 0;
         }
-        .service-item { display: flex; flex-direction: column; align-items: center; text-align: center; }
-        .icon-wrapper { height: 44px; width: 44px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; }
-        .service-icon { width: 38px; height: 38px; object-fit: contain; }
-        .service-name { font-size: 11px; font-weight: 600; }
+        .service-item { 
+            display: flex; flex-direction: column; 
+            align-items: center; text-align: center; 
+        }
+        .icon-wrapper { 
+            height: 48px; width: 48px; /* Немного увеличил область */
+            display: flex; align-items: center; justify-content: center; 
+            margin-bottom: 8px; 
+        }
+        .service-icon { 
+            width: 42px; height: 42px; /* Иконка стала больше */
+            object-fit: contain; 
+            /* Добавляем легкую сочность цвета через фильтр, если иконки красные */
+            filter: drop-shadow(0 0 1px rgba(255, 45, 23, 0.1));
+        }
+        .service-name { 
+            font-size: 11.5px; 
+            font-weight: 700; /* Сделал шрифт жирнее (Black/Bold) */
+            color: #111; /* Цвет текста чуть глубже */
+            letter-spacing: -0.2px;
+        }
 
         /* 4. ПРОМО КАРУСЕЛЬ */
         .promo-scroll-area { margin-top: 12px; overflow-x: auto; padding-bottom: 10px; }
