--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         :root {
-            /* Сделал цвет чуть более насыщенным красным */
-            --kaspi-red: #ff2d17; 
+            --kaspi-red: #ff2d17; /* Яркий насыщенный красный */
             --bg-color: #f2f2f5;
             --text-dark: #222222;
             --gray-text: #8e8e93;
@@ -41,7 +40,7 @@
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
         .header-extra-icon { width: 22px; height: 22px; object-fit: contain; }
 
-        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (54%) */
+        /* 2. РЕКЛАМНЫЕ БАННЕРЫ (4 штуки) */
         .banners-container { background-color: white; padding: 5px 0 10px; }
         .banners-scroll {
             display: flex; overflow-x: auto; padding: 0 15px; 
@@ -64,34 +63,21 @@
             box-shadow: 0 1px 4px rgba(0,0,0,0.08);
         }
 
-        /* 3. СЕРВИСЫ (ОБНОВЛЕННЫЕ СТИЛИ) */
+        /* 3. СЕРВИСЫ (Жирные и яркие) */
         .services-grid {
             display: grid; grid-template-columns: repeat(4, 1fr);
             background: white; padding: 10px 5px 15px; gap: 20px 0;
         }
-        .service-item { 
-            display: flex; flex-direction: column; 
-            align-items: center; text-align: center; 
-        }
-        .icon-wrapper { 
-            height: 48px; width: 48px; /* Немного увеличил область */
-            display: flex; align-items: center; justify-content: center; 
-            margin-bottom: 8px; 
-        }
+        .service-item { display: flex; flex-direction: column; align-items: center; text-align: center; }
+        .icon-wrapper { height: 48px; width: 48px; display: flex; align-items: center; justify-content: center; margin-bottom: 8px; }
         .service-icon { 
-            width: 42px; height: 42px; /* Иконка стала больше */
+            width: 42px; height: 42px; 
             object-fit: contain; 
-            /* Добавляем легкую сочность цвета через фильтр, если иконки красные */
             filter: drop-shadow(0 0 1px rgba(255, 45, 23, 0.1));
         }
-        .service-name { 
-            font-size: 11.5px; 
-            font-weight: 700; /* Сделал шрифт жирнее (Black/Bold) */
-            color: #111; /* Цвет текста чуть глубже */
-            letter-spacing: -0.2px;
-        }
+        .service-name { font-size: 11.5px; font-weight: 700; color: #111; letter-spacing: -0.2px; }
 
-        /* 4. ПРОМО КАРУСЕЛЬ */
+        /* 4. ПРОМО КАРУСЕЛЬ (Все 4 блока) */
         .promo-scroll-area { margin-top: 12px; overflow-x: auto; padding-bottom: 10px; }
         .promo-scroll-area::-webkit-scrollbar { display: none; }
         .promo-grid-container {
@@ -107,7 +93,7 @@
         .promo-main-text { font-size: 14px; font-weight: 700; }
         .promo-subtext { font-size: 11px; color: var(--gray-text); }
 
-        /* 5. ИСТОРИЯ ПРОСМОТРОВ */
+        /* 5. ИСТОРИЯ ПРОСМОТРОВ (Все 10 товаров) */
         .divider-line { height: 1px; background-color: var(--border-color); margin: 15px 15px 10px 15px; }
         .section-title { font-size: 17px; font-weight: 800; margin: 0 15px 12px 15px; color: var(--text-dark); }
         .history-scroll { overflow-x: auto; -webkit-overflow-scrolling: touch; padding-bottom: 20px; }
@@ -176,6 +162,8 @@
         <div class="promo-grid-container">
             <div class="promo-card" onclick="vibrate()"><img src="red.png" class="promo-img"><div class="promo-text-container"><div class="promo-main-text">Рассрочка 0-0-12</div><div class="promo-subtext">Покупки</div></div></div>
             <div class="promo-card" onclick="vibrate()"><img src="credit.png" class="promo-img"><div class="promo-text-container"><div class="promo-main-text">Кредит наличными</div><div class="promo-subtext">на Kaspi Gold</div></div></div>
+            <div class="promo-card" onclick="vibrate()"><img src="deposit.png" class="promo-img"><div class="promo-text-container"><div class="promo-main-text">Депозит</div><div class="promo-subtext">Эффективная ставка 15%</div></div></div>
+            <div class="promo-card" onclick="vibrate()"><img src="magnum.png" class="promo-img"><div class="promo-text-container"><div class="promo-main-text">Magnum</div><div class="promo-subtext">Продукты с доставкой</div></div></div>
         </div>
     </div>
 
@@ -184,10 +172,16 @@
 
     <div class="history-scroll">
         <div class="history-grid">
-            <div class="product-card" onclick="vibrate()"><img src="minoxidil.png" class="product-img"><div class="product-title">Миноксидил 5%</div><div class="product-price">4 500 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="smartglasses.png" class="product-img"><div class="product-title">Смарт-очки</div><div class="product-price">12 990 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="mezoroller.png" class="product-img"><div class="product-title">Мезороллер</div><div class="product-price">2 300 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="marshallmajor.png" class="product-img"><div class="product-title">Marshall Major IV</div><div class="product-price">68 000 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="minoxidil.png" class="product-img"><div class="product-title">Миноксидил 5% для роста бороды</div><div class="product-price">4 500 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="smartglasses.png" class="product-img"><div class="product-title">Смарт-очки Bluetooth 5.0</div><div class="product-price">12 990 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="mezoroller.png" class="product-img"><div class="product-title">Мезороллер для лица 0.5 мм</div><div class="product-price">2 300 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="marshallmajor.png" class="product-img"><div class="product-title">Marshall Major IV Black</div><div class="product-price">68 000 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="microphone.png" class="product-img"><div class="product-title">Микрофон Fifine Studio</div><div class="product-price">18 500 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="creedaventus.png" class="product-img"><div class="product-title">Creed Aventus Парфюм 100мл</div><div class="product-price">145 000 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="foam.png" class="product-img"><div class="product-title">Пенка для умывания мягкая</div><div class="product-price">3 200 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="casio.png" class="product-img"><div class="product-title">Часы Casio Vintage Silver</div><div class="product-price">24 900 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="case.png" class="product-img"><div class="product-title">Чехол Silicone Case iPhone</div><div class="product-price">1 500 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="jbl.png" class="product-img"><div class="product-title">Колонка JBL Flip 6</div><div class="product-price">49 990 ₸</div></div>
         </div>
     </div>
 
